# Google-5-day-capstone-Project

./: .env.example  .gitignore  Dockerfile  README.md  Readme.md  docker-compose.yml  instructions.txt  pyproject.toml
agent/: __init__.py  coach_agent.py  test_coach_agent.py
db/: db_manager.py  schema.sql  sqlite_mcp_server.py  test_db_manager.py
frontend/: main.py  test_main.py
frontend/static/: app.js  index.html  style.css
skills/behavioral_evaluator/: SKILL.md
skills/resume_matcher/: SKILL.md
