[project]
name = "mockmentor"
version = "0.1.0"
description = "MockMentor: Agentic AI Interview Coach"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0"
]
